# Roborex_Chess

./: CMakeLists.txt  License.md  README.md  package.xml
Documentation/: CompleteDocumentation_CHESS_BOT.docx  ProjectReport.docx  chess_bot.docx  chess_bot.pptx  overview.docx
arduino_file/EnableInterrupt/: EnableInterrupt.h
arduino_file/chess_bot/: chess_bot.ino
arduino_file/final_arduino_code/: final_arduino_code.ino
arduino_file/interrupt_/: interrupt_.ino
files/: gamedata.pgn  log.txt  temp.pgn  textdata.txt  uci_list.txt
include/: BoardUI.h  InteractUI.h  mainwindow.h
include/UI/: About.h  GameTile.h  LoadDelete.h  MainUI.h  Menu.h  NewGame.h
include/Ui_Moc/: About.h  BoardUI.h  GameTile.h  InteractUI.h  LoadDelete.h  MainUI.h  Menu.h  NewGame.h
launch/: chess_bot.launch
msg/: botdata.msg  feature.msg  ui_data.msg
script/: ardsimul.py  board_handler.py  chess_ai.py  debug_ardu.py  send_debug.py
script/Control/: ardsimul.py  board_handler.py  chess_ai.py  serial_node.py
script/Debug/: debug_ardu.py  send_debug.py
src/: BoardUI.cpp  frame_handler.cpp  frame_pub.cpp  main.cpp  mainwindow.cpp
src/Image_processing/: frame_handler.cpp  frame_pub.cpp
src/UI/: About.cpp  GameTile.cpp  InteractUI.cpp  LoadDelete.cpp  MainUI.cpp  Menu.cpp  NewGame.cpp  main.cpp
src/Ui_Source/: About.cpp  GameTabs.cpp  GameTile.cpp  InteractUI.cpp  LoadDelete.cpp  MainUI.cpp  Menu.cpp  NewGame.cpp  main.cpp
test_files/: binary2string.py  test5.py  test6.py
test_files/Final/: a.out  arduino_steps.py  binary2string.py  board_to_code_.py  columns.py  fencsv.py  game_write.txt  instruction.cpp  move_type_check.py  pgn_extraction.cpp  rows.py  simulation.py  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  textdata.txt  uci_.txt  write_to_ui.py
ui/: About.ui  BoardUI.ui  GameTile.ui  InteractUI.ui  LoadDelete.ui  MainUI.ui  Menu.ui  NewGame.ui  mainwindow.ui
(+6 files in other folders)
